--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="author" content="André">
+    <link rel="icon" type="image/jpg" href="./images/icon.jpg"/>
     <title>Memory Game Template</title>
   </head>
   <body>
